fix background and removed overflow hidden

--- a/src/app/pages/feature/home/home.component.scss
+++ b/src/app/pages/feature/home/home.component.scss
@@ -1,17 +1,5 @@
 @import "../../../../assets/scss/variables";
 
-.home {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1443890923422-7819ed4101c0?fm=jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    filter: blur(3px);
-    -webkit-filter: blur(5px);
-    position: absolute;
-    z-index: -1;
-    height: 100VH;
-    width: 100VW;
-}
-
 .hero-h1 {
     color: $white;
     font-size: 5rem;
